--- a/imageComp/client/main.css
+++ b/imageComp/client/main.css
@@ -76,7 +76,7 @@ header {
 
 li {
     text-align: center;
-    font-size: 2em;
+    font-size: 1em;
     /*position: relative;*/
     list-style: none;
     padding: 15px;
@@ -84,6 +84,18 @@ li {
     border-bottom: #eee solid 5px;
     border-left: #eee solid 5px;
     border-right: #eee solid 5px;
+}
+
+button {
+  text-align: center;
+  font-size: 2em;
+  /*position: relative;*/
+  list-style: none;
+  padding: 40px;
+  color: rgb(255, 255, 255);
+  border-bottom: #eee solid 5px;
+  border-left: #eee solid 5px;
+  border-right: #eee solid 5px;
 }
 
 /*li .text {
