--- a/imageComp/client/main.css
+++ b/imageComp/client/main.css
@@ -55,7 +55,7 @@ h2 {
 ul {
     text-align: center;
     /*position: relative;*/
-    text-shadow: 2px 2px #32535b;
+    text-shadow: 4px 4px #32535b;
     margin: 0;
     padding: 0;
     background: rgba(56, 187, 162, 0.87);
@@ -77,7 +77,16 @@ li {
 
 .container {
     border-radius: 8px;
-    max-width: 600px;
+    max-width: 800px;
+    margin: 0 auto;
+    min-height: 100%;
+    background: white;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.containerSBS {
+    border-radius: 8px;
+    max-width: 800px;
     margin: 0 auto;
     min-height: 100%;
     background: white;
@@ -100,7 +109,7 @@ button {
  /* Main page (home) buttons contained in .container */
 .buttonContainer1 {
       border-radius: 8px;
-      min-width: 450px;
+      min-width: 600px;
       margin: 0 auto;
       min-height: 80%;
       background: rgba(56, 187, 162, 0.87);
@@ -114,6 +123,26 @@ button {
 .buttonContainer1:hover {
   background-color: #FFFFFF;
   color: #1d8ecd;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.buttonContainer2 {
+      border-radius: 8px;
+      min-width: 350px;
+      /*margin: 0 auto;*/
+      min-height: 50px;
+      background: #1d8ecd;
+      border: 3px solid #ffffff;
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.4s;
+      cursor: pointer;
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+}
+.buttonContainer2:hover {
+  background-color: rgba(56, 187, 162, 0.87);
+  color: #1d8ecd;
+  border: 3px solid #1d8ecd;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 /*li .text {
