--- a/ImageFXComp/src/application/views/ICFXDataTable.fxml
+++ b/ImageFXComp/src/application/views/ICFXDataTable.fxml
@@ -18,7 +18,7 @@
         <items>
           <AnchorPane fx:id="tableAPane" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="425.0">
                <children>
-                  <TableView fx:id="dataTableView" layoutX="-12.0" layoutY="49.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="298.0" prefWidth="400.0" style="-fx-background-color: SLATEGREY;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="dataTableView" layoutX="-12.0" layoutY="49.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="298.0" prefWidth="400.0" style="-fx-background-color: SLATEGREY;" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="ImageTcolumn" prefWidth="225.0" text="Image" />
                       <TableColumn fx:id="LocationTcoloumn" prefWidth="225.0" text="Location" />
@@ -46,18 +46,18 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label fx:id="ImageLocationLable" text="Image Location" />
-                        <Label fx:id="ImageSizeLabel" text="Size" GridPane.rowIndex="1" />
+                        <Label fx:id="ImageLocationLable" text="Image Date" />
+                        <Label fx:id="ImageSizeLabel" text="Image Size" GridPane.rowIndex="1" />
                         <Label fx:id="colorfulnessLabel" text="Colorfulness" GridPane.rowIndex="2" />
-                        <Label fx:id="redLabel" text="Red" GridPane.rowIndex="3" />
-                        <Label fx:id="GreenLabel" text="Green" GridPane.rowIndex="4" />
-                        <Label fx:id="BlueLabel" text="Blue" GridPane.rowIndex="5" />
-                        <Label fx:id="locationDetailsLabel" text="Label" GridPane.columnIndex="1" />
-                        <Label fx:id="sizeDetailsLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="colorfulnessDetailsLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="RedDetailsLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label fx:id="GreenDetailsLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label fx:id="BlueDetailsLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="redLabel" text="Red %" GridPane.rowIndex="3" />
+                        <Label fx:id="GreenLabel" text="Green %" GridPane.rowIndex="4" />
+                        <Label fx:id="BlueLabel" text="Blue %" GridPane.rowIndex="5" />
+                        <Label fx:id="locationDetailsLabel" alignment="CENTER" contentDisplay="CENTER" text="---" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                        <Label fx:id="sizeDetailsLabel" alignment="CENTER" contentDisplay="CENTER" text="---" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <Label fx:id="colorfulnessDetailsLabel" alignment="CENTER" contentDisplay="CENTER" text="---" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                        <Label fx:id="RedDetailsLabel" alignment="CENTER" contentDisplay="CENTER" text="---" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                        <Label fx:id="GreenDetailsLabel" alignment="CENTER" contentDisplay="CENTER" text="---" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                        <Label fx:id="BlueDetailsLabel" alignment="CENTER" contentDisplay="CENTER" text="---" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                   <ButtonBar layoutX="54.0" layoutY="250.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
