--- a/ImageFXComp/bin/application/views/ICFXmainView.fxml
+++ b/ImageFXComp/bin/application/views/ICFXmainView.fxml
@@ -60,14 +60,14 @@
                <right>
                   <Pane fx:id="ILbpR" prefWidth="75.0" style="-fx-background-color: TEAL;" BorderPane.alignment="CENTER">
                      <children>
-                        <Label fx:id="RedLabelL" layoutX="13.0" layoutY="17.0" text="Red %" textFill="RED" />
+                        <Label fx:id="RedLabelL" layoutX="12.0" layoutY="17.0" text="Red " textFill="RED" />
                         <Label fx:id="RedPercentLabelL" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="37.0" text="- - - - " textAlignment="CENTER" />
-                        <Label fx:id="BlueLabelL" alignment="CENTER" contentDisplay="CENTER" layoutX="11.0" layoutY="61.0" text="Blue %" textAlignment="CENTER" textFill="BLUE" />
-                        <Label fx:id="BluePercentLabelL" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="80.0" text="- - - - " textAlignment="CENTER" />
-                        <Label fx:id="GreenLabelL" layoutX="10.0" layoutY="100.0" text="Green %" textFill="LIME" />
-                        <Label fx:id="GreenPercentLabelL" layoutX="13.0" layoutY="119.0" text="- - - - " />
-                        <Label fx:id="ColorLabelL" layoutX="4.0" layoutY="139.0" text="Colorful %" textFill="#7fdaf1" />
-                        <Label fx:id="ColorPercentageLabelL" layoutX="14.0" layoutY="155.0" text="- - - - " />
+                        <Label fx:id="BlueLabelL" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="61.0" text="Blue " textAlignment="CENTER" textFill="BLUE" />
+                        <Label fx:id="BluePercentLabelL" alignment="CENTER" contentDisplay="CENTER" layoutX="16.0" layoutY="80.0" text="- - - - " textAlignment="CENTER" />
+                        <Label fx:id="GreenLabelL" layoutX="12.0" layoutY="100.0" text="Green " textFill="LIME" />
+                        <Label fx:id="GreenPercentLabelL" layoutX="15.0" layoutY="119.0" text="- - - - " />
+                        <Label fx:id="ColorLabelL" layoutX="12.0" layoutY="139.0" text="Colorful " textFill="#7fdaf1" />
+                        <Label fx:id="ColorPercentageLabelL" layoutX="16.0" layoutY="155.0" text="- - - - " />
                      </children>
                   </Pane>
                </right>
@@ -141,14 +141,14 @@
                <left>
                   <Pane fx:id="IRbpL" prefWidth="75.0" style="-fx-background-color: TEAL;" BorderPane.alignment="CENTER">
                      <children>
-                        <Label fx:id="RedLabelR" layoutX="14.0" layoutY="23.0" text="Red %" textFill="RED" />
+                        <Label fx:id="RedLabelR" layoutX="12.0" layoutY="25.0" text="Red" textFill="RED" />
                         <Label fx:id="RedPercentLabelR" alignment="CENTER" contentDisplay="CENTER" layoutX="16.0" layoutY="43.0" text="- - - - " textAlignment="CENTER" />
-                        <Label fx:id="BlueLabelR" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="67.0" text="Blue %" textAlignment="CENTER" textFill="BLUE" />
+                        <Label fx:id="BlueLabelR" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="67.0" text="Blue" textAlignment="CENTER" textFill="BLUE" />
                         <Label fx:id="BluePercentLabelR" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="86.0" text="- - - - " textAlignment="CENTER" />
-                        <Label fx:id="GreenLabelR" layoutX="12.0" layoutY="106.0" text="Green %" textFill="LIME" />
+                        <Label fx:id="GreenLabelR" layoutX="12.0" layoutY="106.0" text="Green" textFill="LIME" />
                         <Label fx:id="GreenPercentLabelR" layoutX="16.0" layoutY="124.0" text="- - - - " />
-                        <Label fx:id="ColorLabelR" layoutX="4.0" layoutY="145.0" text="Colorful %" textFill="#7fdaf1" />
-                        <Label fx:id="ColorPercentageLabelR" layoutX="16.0" layoutY="162.0" text="- - - - " />
+                        <Label fx:id="ColorLabelR" layoutX="12.0" layoutY="145.0" text="Colorful" textFill="#7fdaf1" />
+                        <Label fx:id="ColorPercentageLabelR" layoutX="17.0" layoutY="162.0" text="- - - - " />
                      </children></Pane>
                </left>
                <right>
