--- a/ImageFX/src/application/views/ICFXDataTable.fxml
+++ b/ImageFX/src/application/views/ICFXDataTable.fxml
@@ -20,8 +20,8 @@
                <children>
                   <TableView fx:id="dataTableView" layoutX="-12.0" layoutY="49.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#loadImageData" prefHeight="298.0" prefWidth="400.0" style="-fx-background-color: SLATEGREY;" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn fx:id="ImageTcolumn" prefWidth="177.0" text="Image" />
-                      <TableColumn fx:id="LocationTcoloumn" minWidth="0.0" prefWidth="188.0" text="Location" />
+                      <TableColumn fx:id="NameColumn" prefWidth="177.0" text="Image" />
+                      <TableColumn fx:id="PathColumn" minWidth="0.0" prefWidth="188.0" text="Location" />
                         <TableColumn fx:id="DateColumn" prefWidth="182.0" text="Date &amp; Time" />
                         <TableColumn fx:id="RedColumn" prefWidth="88.0" text="Red%" />
                         <TableColumn fx:id="GreenColumn" prefWidth="69.0" text="Green%" />
